# ghostaudit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ghostaudit/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  scanner.py
src/ghostaudit/checks/: __init__.py  base.py  images.py  network.py  pods.py  rbac.py  resources.py  secrets.py
src/ghostaudit/report/: __init__.py  console.py  html.py  json_report.py
src/ghostaudit/report/templates/: report.html
tests/: conftest.py
tests/test_checks/: test_pods.py  test_rbac.py
