[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostaudit"
dynamic = ["version"]
description = "Kubernetes Security Auditor CLI - scan clusters for misconfigurations and generate reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joe Munene", email = "baptiste.atanasije@gmail.com" },
]
keywords = ["kubernetes", "security", "audit", "cis-benchmark", "k8s"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes>=28.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.16",
]

[project.scripts]
ghostaudit = "ghostaudit.cli:app"

[project.urls]
Homepage = "https://github.com/ghostkube/ghostaudit"
Repository = "https://github.com/ghostkube/ghostaudit"
Issues = "https://github.com/ghostkube/ghostaudit/issues"

[tool.hatch.version]
path = "src/ghostaudit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ghostaudit"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
